--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2 class="pt-5">My Skills</h2>
     
                 <div class="container second my-5">
-                    <img src="design.gif" alt="a design" height="300" class="design">
+                    <img src="design.gif" alt="a design" height="300" class="design mb-2">
                     <div class="text">
                         <h3>A Web Developer</h3>
                         <p class="px-3 fs-5 text-muted">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="container media">
-                    <img src="social media.gif" alt="social media" height="300" class="design">
+                    <img src="social media.gif" alt="social media" height="300" class="design mb-2">
                     <div class="text">
                       <h3>A Social Media Marketer and Manager</h3>
                       <p class="px-3 fs-5 text-muted">
