--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                         <p class="px-3 fs-5 text-muted">
                            I have always loved coding since 2020, but consistency has been an
                            issue for me. Although, this year has been different. Since June, I 
-                           had been able to learn and cover alot of things which has greatly intrigued my 
+                           have been able to learn and cover alot of things which has greatly intrigued my 
                            interest ❣️.
     
                            So far, I have learnt about positioning, media queries, flexbox, grid and even 
                            bootstrap as well as some basis of UI/UX designs. All this has been possible because
-                           I have an amaging tutor, Angela Yu; who takes her time to simplify everything.
+                           I have an amazing tutor, Angela Yu; who takes her time to simplify everything.
                            Though I'm yet to learn Javascript, but I know I will with consistency.
                         </p>
                     </div>
